fixed html semantics, contrast issues and alt text

--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -24,7 +24,7 @@
   height: 100px;
 }
 .scrollable {
-  height: 100vh;
+  height: 85vh;
   overflow-y: auto;
   overflow: auto;
 }
